# LDID-app-server-daemon

./: README.md
Code/: Makefile.am  configure.ac  settings
Code/src/: Makefile.am  main.cc  main.h  settings
Install/Debian/: ldid-inf-0.1.deb
